manage sync server status

--- a/libs/sync/src/lib/connectors/connector/connector.component.html
+++ b/libs/sync/src/lib/connectors/connector/connector.component.html
@@ -1,5 +1,6 @@
 <pa-card
   [class.selected]="selected"
+  [disabled]="disabled"
   (cardClick)="selectConnector.emit($event)">
   <div
     class="connector"
