--- a/libs/common/src/lib/upload/upload-data/upload-data.component.html
+++ b/libs/common/src/lib/upload/upload-data/upload-data.component.html
@@ -1,4 +1,4 @@
-<div class="upload-data-page page-spacing">
+<div class="upload-data-page">
   <h1>{{ 'stash.upload_data' | translate }}</h1>
   <p class="body-m">{{ 'stash.upload.page-subtitle' | translate }}</p>
 
@@ -28,10 +28,26 @@
 
     <div class="desktop-option">
       @if (isSyncEnabled | async) {
-        <p class="body-m description">
-          {{ 'stash.upload.sync.setup' | translate }}
-        </p>
-        <!-- <nsy-connectors type="sources"></nsy-connectors> -->
+        @if (!hasSyncServer) {
+          <p class="body-m description">
+            {{ 'stash.upload.sync.setup' | translate }}
+          </p>
+          <pa-button
+            (click)="setupSync()"
+            size="small">
+            {{ 'stash.upload.sync.setup-button' | translate }}
+          </pa-button>
+        } @else {
+          <h2 class="title-m">
+            {{ 'stash.upload.sync.title' | translate }}
+          </h2>
+          <p class="body-m description">
+            {{ 'stash.upload.sync.description' | translate }}
+          </p>
+        }
+        <nsy-connectors
+          type="sources"
+          [disabled]="!hasSyncServer || (isServerDown | async)"></nsy-connectors>
       } @else {
         <p class="body-m description">
           <span class="title-xs">Nuclia Desktop.</span>
