--- a/libs/sync/src/lib/connectors/connectors.component.scss
+++ b/libs/sync/src/lib/connectors/connectors.component.scss
@@ -1,12 +1,9 @@
 @import 'apps/dashboard/src/variables';
 
-h2 {
-  margin-bottom: 0;
-}
-
 .connectors-list {
   display: flex;
   flex-wrap: wrap;
-  padding: rhythm(1);
+  padding: rhythm(1) rhythm(1) rhythm(1) 0;
+  margin-left: - rhythm(2);
   margin-bottom: rhythm(8);
 }
