--- a/libs/sync/src/lib/upload/upload.component.html
+++ b/libs/sync/src/lib/upload/upload.component.html
@@ -14,6 +14,8 @@
       </div>
     </ng-container>
   </div>
+  <h2>{{ 'upload.source.title' | translate }}</h2>
+  <p>{{ 'upload.source.description' | translate }}</p>
   <nsy-connectors
     *ngIf="(step | async) === 0"
     type="sources"
