[sc-8571] Enable SAML flow (#1270)
* Add SAML configuration form

* Enable SAML flow

* Fix SAML properties

--- a/libs/user/src/lib/login/login.component.scss
+++ b/libs/user/src/lib/login/login.component.scss
@@ -73,3 +73,11 @@
     height: 1px;
   }
 }
+
+.login_sso {
+  margin: -#{rhythm(1)} 0 rhythm(2);
+  text-align: right;
+  a {
+    text-decoration: none;
+  }
+}
