--- a/libs/common/src/lib/upload/upload-bar/upload-bar.component.html
+++ b/libs/common/src/lib/upload/upload-bar/upload-bar.component.html
@@ -20,7 +20,7 @@
   </pa-button>
 
   <pa-button
-    class="close-button"
+    class="close-bar"
     icon="cross"
     kind="inverted"
     aspect="basic"
