--- a/apps/dashboard/src/app/knowledge-box/knowledge-box/knowledge-box.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box/knowledge-box.component.html
@@ -1,7 +1,7 @@
-<div
-  class="upload-bar-container"
-  *ngIf="showBar | async">
-  <stf-upload-bar></stf-upload-bar>
-</div>
+@if (showBar | async) {
+  <div class="upload-bar-container">
+    <stf-upload-bar></stf-upload-bar>
+  </div>
+}
 
 <router-outlet></router-outlet>
