--- a/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
+++ b/libs/common/src/lib/resources/edit-resource/edit-resource.component.html
@@ -113,7 +113,7 @@
     <nav>
       <ul>
         @if (currentView !== 'add-field') {
-          @if (currentView !== 'preview' && currentView !== 'annotation') {
+          @if (currentView !== 'annotation') {
             <li
               [class.active]="(currentField | async) === 'resource'"
               (click)="navigateToField('resource')">
