--- a/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
+++ b/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
@@ -136,7 +136,7 @@
         </div>
       </section>
       <section>
-        <pa-toggle [(value)]="editExtraMetadata">Edit extra metadata</pa-toggle>
+        <pa-toggle [(value)]="editExtraMetadata">{{ 'resource.extra-metadata.edit-toggle' | translate }}</pa-toggle>
         <div class="extra-metadata-container">
           <pa-textarea
             *ngIf="editExtraMetadata"
