[sc-8285] Allow to modify security groups when editing a resource
- Add security in resource model and ResourceProperties
- Update resource editing page:
  - add expanders to make the page more readable
  - add a security section allowing to update `access_groups` property
  - make the summary textarea field resizable and update the expander size when resizing the summary
- Add security section to resource preview

--- a/libs/common/src/lib/resources/edit-resource/preview/preview.component.html
+++ b/libs/common/src/lib/resources/edit-resource/preview/preview.component.html
@@ -116,6 +116,11 @@
               <pre><code>{{extraMetadata}}</code></pre>
             </div>
           }
+          @if (resource.security) {
+            <div class="title-m">{{ 'resource.security.label' | translate }}</div>
+            <div class="title-xxs">{{ 'resource.security.access-groups.label' | translate }}</div>
+            <p [innerHTML]="resource.security.access_groups?.join('<br>') || '–'"></p>
+          }
         </div>
       } @else if (noField | async) {
         <div class="paragraph-container">
