--- a/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
+++ b/libs/common/src/lib/resources/edit-resource/profile/profile.component.html
@@ -5,151 +5,178 @@
       *ngIf="isFormReady"
       [formGroup]="form"
       (ngSubmit)="save()">
-      <div>
-        <pa-input
-          id="uid"
-          readonly
-          [value]="(resource | async)?.uuid">
-          {{ 'generic.uid' | translate }}
-        </pa-input>
-      </div>
-      <div>
-        <pa-input
-          id="title"
-          formControlName="title">
-          {{ 'resource.title' | translate }}
-        </pa-input>
-      </div>
-      <div>
-        <pa-textarea
-          id="summary"
-          formControlName="summary"
-          [rows]="5">
-          {{ 'resource.summary' | translate }}
-        </pa-textarea>
-      </div>
-      <div>
-        <div>
-          <label class="title-s">
-            {{ 'resource.thumbnail.label' | translate }}
-          </label>
-          <div class="body-s">{{ 'resource.thumbnail.help' | translate }}</div>
-        </div>
-        <div class="thumbnails-container">
-          <div
-            class="drop-container"
-            *ngIf="!newThumbnail">
-            <div
-              class="drop-image-area"
-              [class.file-over]="hasBaseDropZoneOver"
-              stfFileDrop
-              fileDropAccept="image/*"
-              (fileOver)="fileOverBase($event)"
-              (atFileDrop)="uploadThumbnail($event)"
-              (click)="chooseFiles($event)">
-              <span>{{ 'resource.thumbnail.drop' | translate }}</span>
+      <pa-expander [contentLoaded]="updateGeneralExpanderSize | async">
+        <pa-expander-header>
+          <div class="title-s">{{ 'resource.preview.general' | translate }}</div>
+        </pa-expander-header>
+        <pa-expander-body>
+          <div class="form-section">
+            <pa-input
+              id="uid"
+              readonly
+              [value]="(resource | async)?.uuid">
+              {{ 'generic.uid' | translate }}
+            </pa-input>
+            <pa-input
+              id="title"
+              formControlName="title">
+              {{ 'resource.title' | translate }}
+            </pa-input>
+            <pa-textarea
+              id="summary"
+              formControlName="summary"
+              resizable
+              (resizing)="onResizingTextarea($event)"
+              [rows]="5">
+              {{ 'resource.summary' | translate }}
+            </pa-textarea>
+
+            <div>
+              <div>
+                <label class="title-s">
+                  {{ 'resource.thumbnail.label' | translate }}
+                </label>
+                <div class="body-s">{{ 'resource.thumbnail.help' | translate }}</div>
+              </div>
+              <div class="thumbnails-container">
+                @if (!newThumbnail) {
+                  <div class="drop-container">
+                    <div
+                      class="drop-image-area"
+                      [class.file-over]="hasBaseDropZoneOver"
+                      stfFileDrop
+                      fileDropAccept="image/*"
+                      (fileOver)="fileOverBase($event)"
+                      (atFileDrop)="uploadThumbnail($event)"
+                      (click)="chooseFiles($event)">
+                      <span>{{ 'resource.thumbnail.drop' | translate }}</span>
+                    </div>
+                  </div>
+                }
+
+                <input
+                  #thumbnailFileInput
+                  type="file"
+                  accept="image/*"
+                  stfFileSelect
+                  hidden
+                  (atFileSelect)="uploadThumbnail($event)" />
+
+                @if (newThumbnail) {
+                  <stf-thumbnail
+                    alt="New thumbnail"
+                    [url]="newThumbnail"
+                    [selected]="newThumbnail === selectedThumbnail"
+                    (select)="selectThumbnail(newThumbnail)"
+                    (delete)="markThumbnailForDeletion(newThumbnail)"></stf-thumbnail>
+                }
+
+                @for (thumb of thumbnails | async; track thumb.uri; let index = $index) {
+                  <div>
+                    <stf-thumbnail
+                      [disabled]="isSaving"
+                      [url]="thumb.blob"
+                      [selected]="thumb.uri === selectedThumbnail"
+                      [alt]="'Thumbnail ' + index"
+                      (select)="selectThumbnail(thumb.uri)"
+                      (delete)="markThumbnailForDeletion(thumb.uri)"></stf-thumbnail>
+                  </div>
+                }
+                @if (isSaving) {
+                  <div class="loading-mask">
+                    <nsi-spinner></nsi-spinner>
+                  </div>
+                }
+              </div>
             </div>
           </div>
+        </pa-expander-body>
+      </pa-expander>
+      <pa-expander>
+        <pa-expander-header>
+          <div class="title-s">{{ 'resource.preview.origin' | translate }}</div>
+        </pa-expander-header>
+        <pa-expander-body>
+          <section
+            formGroupName="origin"
+            class="form-section">
+            <pa-input
+              id="authors"
+              help="resource.origin.collaborators-helper"
+              formControlName="collaborators">
+              {{ 'resource.origin.collaborators' | translate }}
+            </pa-input>
+            <pa-date-picker
+              id="created"
+              [label]="'resource.origin.created' | translate"
+              formControlName="created"></pa-date-picker>
+            <pa-date-picker
+              id="modified"
+              [label]="'resource.origin.modified' | translate"
+              formControlName="modified"></pa-date-picker>
+            <pa-input
+              id="filename"
+              formControlName="filename">
+              {{ 'resource.origin.filename' | translate }}
+            </pa-input>
+            <pa-input
+              id="url"
+              formControlName="url">
+              {{ 'resource.origin.url' | translate }}
+            </pa-input>
+            <pa-textarea
+              id="related"
+              formControlName="related"
+              [rows]="3">
+              {{ 'resource.origin.related' | translate }}
+            </pa-textarea>
+            <pa-input
+              id="path"
+              formControlName="path">
+              {{ 'resource.origin.path' | translate }}
+            </pa-input>
+          </section>
+        </pa-expander-body>
+      </pa-expander>
+      <pa-expander [contentLoaded]="editExtraMetadata">
+        <pa-expander-header>
+          <div class="title-s">{{ 'resource.extra-metadata.label' | translate }}</div>
+        </pa-expander-header>
+        <pa-expander-body>
+          <section class="form-section extra-metadata-container">
+            <pa-toggle [(value)]="editExtraMetadata">{{ 'resource.extra-metadata.edit-toggle' | translate }}</pa-toggle>
 
-          <input
-            #thumbnailFileInput
-            type="file"
-            accept="image/*"
-            stfFileSelect
-            hidden
-            (atFileSelect)="uploadThumbnail($event)" />
-
-          <stf-thumbnail
-            *ngIf="newThumbnail"
-            alt="New thumbnail"
-            [url]="newThumbnail"
-            [selected]="newThumbnail === selectedThumbnail"
-            (select)="selectThumbnail(newThumbnail)"
-            (delete)="markThumbnailForDeletion(newThumbnail)"></stf-thumbnail>
-
-          <div *ngFor="let thumb of thumbnails | async; let index = index; let count = count; trackBy: trackByUri">
-            <stf-thumbnail
-              [disabled]="isSaving"
-              [url]="thumb.blob"
-              [selected]="thumb.uri === selectedThumbnail"
-              [alt]="'Thumbnail ' + index"
-              (select)="selectThumbnail(thumb.uri)"
-              (delete)="markThumbnailForDeletion(thumb.uri)"></stf-thumbnail>
-          </div>
-          <div
-            class="loading-mask"
-            *ngIf="isSaving">
-            <nsi-spinner></nsi-spinner>
-          </div>
-        </div>
-      </div>
-
-      <section formGroupName="origin">
-        <div>
-          <pa-input
-            id="authors"
-            help="resource.origin.collaborators-helper"
-            formControlName="collaborators">
-            {{ 'resource.origin.collaborators' | translate }}
-          </pa-input>
-        </div>
-        <div>
-          <pa-date-picker
-            id="created"
-            [label]="'resource.origin.created' | translate"
-            formControlName="created"></pa-date-picker>
-        </div>
-        <div>
-          <pa-date-picker
-            id="modified"
-            [label]="'resource.origin.modified' | translate"
-            formControlName="modified"></pa-date-picker>
-        </div>
-        <div>
-          <pa-input
-            id="filename"
-            formControlName="filename">
-            {{ 'resource.origin.filename' | translate }}
-          </pa-input>
-        </div>
-        <div>
-          <pa-input
-            id="url"
-            formControlName="url">
-            {{ 'resource.origin.url' | translate }}
-          </pa-input>
-        </div>
-        <div>
-          <pa-textarea
-            id="related"
-            formControlName="related"
-            [rows]="3">
-            {{ 'resource.origin.related' | translate }}
-          </pa-textarea>
-        </div>
-        <div>
-          <pa-input
-            id="path"
-            formControlName="path">
-            {{ 'resource.origin.path' | translate }}
-          </pa-input>
-        </div>
-      </section>
-      <section>
-        <pa-toggle [(value)]="editExtraMetadata">{{ 'resource.extra-metadata.edit-toggle' | translate }}</pa-toggle>
-        <div class="extra-metadata-container">
-          <pa-textarea
-            *ngIf="editExtraMetadata"
-            id="extra"
-            formControlName="extra"
-            [rows]="5">
-            {{ 'resource.extra-metadata.label' | translate }}
-          </pa-textarea>
-          <div *ngIf="!editExtraMetadata">
-            <nsi-json-viewer [json]="extraMetadata"></nsi-json-viewer>
-          </div>
-        </div>
-      </section>
+            @if (editExtraMetadata) {
+              <pa-textarea
+                id="extra"
+                formControlName="extra"
+                [rows]="5">
+                {{ 'resource.extra-metadata.label' | translate }}
+              </pa-textarea>
+            } @else {
+              <nsi-json-viewer [json]="extraMetadata"></nsi-json-viewer>
+            }
+          </section>
+        </pa-expander-body>
+      </pa-expander>
+      <pa-expander>
+        <pa-expander-header>
+          <div class="title-s">{{ 'resource.security.label' | translate }}</div>
+        </pa-expander-header>
+        <pa-expander-body>
+          <section
+            class="form-section"
+            formGroupName="security">
+            <pa-textarea
+              [rows]="3"
+              [help]="'resource.security.access-groups.help' | translate"
+              formControlName="access_groups"
+              resizable>
+              {{ 'resource.security.access-groups.label' | translate }}
+            </pa-textarea>
+          </section>
+        </pa-expander-body>
+      </pa-expander>
     </form>
 
     <footer class="form-buttons with-right-panel">
